# financial-sentiment-analysis

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: api.py  client.py
data/: news.json
notebooks/: exploratory_analysis.ipynb
